--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /*Global*/
-*{
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -7,26 +7,26 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-:root{
+:root {
   font-size: 62.5%;
   --base-font: "Mulish", sans-serif;
-  --accenty-color:#B52184;
-  --text-base-color:#312D64;
-  --cards-gradient: linear-gradient(96.21deg, #344193 0%, #302C63 99.68%);
+  --accenty-color: #b52184;
+  --text-base-color: #312d64;
+  --cards-gradient: linear-gradient(96.21deg, #344193 0%, #302c63 99.68%);
   --cards-bg: #fff;
 }
 
-body{
+body {
   font-family: var(--base-font);
   background: #fbefff;
 }
 
-img{
+img {
   width: 100%;
   display: block;
 }
 
-h1{
+h1 {
   font-size: 3.2rem;
   line-height: 4rem;
   color: var(--accenty-color);
@@ -35,7 +35,15 @@ h1{
   margin: 1.7rem auto 0.5rem;
 }
 
-h3{
+h2 {
+  font-size: 3.2rem;
+  line-height: 4rem;
+  font-weight: 900;
+  color: var(--accenty-color);
+  margin-bottom: 4.3rem;
+}
+
+h3 {
   font-size: 3rem;
   line-height: 4rem;
   font-weight: 900;
@@ -43,63 +51,103 @@ h3{
   margin: 3.3rem auto 1.9rem;
 }
 
-P{
+P {
   font-size: 1.6rem;
   color: var(--text-base-color);
   font-weight: 600;
   line-height: 2rem;
 }
+
+button,
+input,
+fieldset,
+textarea {
+  border: none;
+  background: none;
+  font-family: var(--base-font);
+}
 /**/
 
 /*Hero Section*/
-#hero{
+#hero {
   padding: 0 3.4rem 9.3rem 3.2rem;
   text-align: center;
   height: 100vh;
 }
-.astronaut{
+.astronaut {
   min-width: 34.6rem;
 }
-#hero .hero-text p{
+#hero .hero-text p {
   font-size: 2rem;
   line-height: 2.5rem;
   margin-bottom: 3.5rem;
 }
-#hero .hero-text .button-down{
+#hero .hero-text .button-down {
   width: 5.8rem;
   height: 10.5rem;
-  border: .4rem solid var(--accenty-color);
+  border: 0.4rem solid var(--accenty-color);
   display: flex;
   justify-content: center;
   border-radius: 7.6rem;
   margin: 0 auto;
 
-  transition: filter .3s;
+  transition: filter 0.3s;
 }
-#hero .hero-text .button-down img{
+#hero .hero-text .button-down img {
   width: 3rem;
 }
 
-#hero .hero-text .button-down:hover{
+#hero .hero-text .button-down:hover {
   filter: brightness(0.7);
 }
 /**/
 
 /*Cards Section*/
-#cards{
+#cards {
   background: var(--cards-gradient);
   padding: 5.2rem 3.9rem;
   display: grid;
   gap: 4.9rem;
 }
 
-#cards .card{
+#cards .card {
   background: var(--cards-bg);
   padding: 2.6rem;
   border-radius: 2rem;
 }
 
-#cards .card img{
+#cards .card img {
   width: 8rem;
+}
+/**/
 
+/*Contact Section*/
+#contact {
+  padding: 7.8rem 4rem 6.5rem;
+}
+
+#contact form .input-wrapper {
+  margin-bottom: 2.4rem;
+}
+
+#contact form input,
+#contact form textarea {
+  border: 1.5px solid var(--text-base-color);
+  border-radius: 1.6rem;
+  width: 100%;
+  padding: 1.2rem 1.6rem 1.4rem;
+
+  font-size: 1.6rem;
+  line-height: 1.6rem;
+  font-weight: 600;
+}
+
+#contact form input::placeholder,
+#contact form textarea::placeholder {
+  color: var(--text-base-color);
+}
+
+#contact form textarea{
+  height: 12.6rem;
+  resize: none;
 }
